# fortunes-historical

./: License  Makefile  README.md  setup.cfg
data/: 2.11BSD-fortunes  2.11BSD-fortunes-o  2.9BSD-fortunes  2.9BSD-fortunes-o  32V-fortunes  3BSD-fortunes  4.1cBSD-fortunes  4.1cBSD-fortunes-o  4.2BSD-fortunes  4.2BSD-fortunes-o  4.3BSD-fortunes  4.3BSD-fortunes-o  4.4BSD-fortunes  4.4BSD-fortunes-o  4.4BSD-fortunes2  4.4BSD-fortunes2-o  4.4BSD-zippy  4BSD-fortunes  Net2-fortunes  Net2-fortunes-o  Net2-startrek  V7-fortunes  V8-fortunes
