[metadata]
name = fortunes-historical
description = Fortune data files from historical Unix versions
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.8.7
license = Caldera UNIX enthusiasts License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/fortunes-historical/
project_urls =
    Bug Tracker = https://github.com/HubTou/fortunes-historical/issues
keywords = pnu-project, unix, fortune
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Fortune Cookies

[options]
package_dir =
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.data_files]
share/games/fortune = 
    data/2.11BSD-fortunes
    data/2.11BSD-fortunes-o
    data/2.11BSD-fortunes-o.dat
    data/2.11BSD-fortunes.dat
    data/2.9BSD-fortunes
    data/2.9BSD-fortunes-o
    data/2.9BSD-fortunes-o.dat
    data/2.9BSD-fortunes.dat
    data/32V-fortunes
    data/32V-fortunes.dat
    data/3BSD-fortunes
    data/3BSD-fortunes.dat
    data/4.1cBSD-fortunes
    data/4.1cBSD-fortunes-o
    data/4.1cBSD-fortunes-o.dat
    data/4.1cBSD-fortunes.dat
    data/4.2BSD-fortunes
    data/4.2BSD-fortunes-o
    data/4.2BSD-fortunes-o.dat
    data/4.2BSD-fortunes.dat
    data/4.3BSD-fortunes
    data/4.3BSD-fortunes-o
    data/4.3BSD-fortunes-o.dat
    data/4.3BSD-fortunes.dat
    data/4.4BSD-fortunes
    data/4.4BSD-fortunes-o
    data/4.4BSD-fortunes-o.dat
    data/4.4BSD-fortunes.dat
    data/4.4BSD-fortunes2
    data/4.4BSD-fortunes2-o
    data/4.4BSD-fortunes2-o.dat
    data/4.4BSD-fortunes2.dat
    data/4.4BSD-limerick
    data/4.4BSD-limerick.dat
    data/4.4BSD-startrek
    data/4.4BSD-startrek.dat
    data/4.4BSD-zippy
    data/4.4BSD-zippy.dat
    data/4BSD-fortunes
    data/4BSD-fortunes.dat
    data/Net2-fortunes
    data/Net2-fortunes-o
    data/Net2-fortunes-o.dat
    data/Net2-fortunes.dat
    data/Net2-startrek
    data/Net2-startrek.dat
    data/Net2-zippy
    data/Net2-zippy.dat
    data/V7-fortunes
    data/V7-fortunes.dat
    data/V8-fortunes
    data/V8-fortunes.dat

